# PETtals-Embedded

./: CMakeLists.txt  main.c  testAPI
BUTTON/: CMakeLists.txt  button_test.c
FreeRTOS/: FreeRTOSConfig.h
M6E/: CMakeLists.txt  m6e_uhf_api.c  m6e_uhf_api.h
M6E_API/: CMakeLists.txt  Makefile  llrp_reader.c  llrp_reader_l3.c  osdep.c  osdep_picow.c  serial_reader.c  serial_reader_l3.c  serial_transport.c  serial_transport_picow.c  serial_transport_samD51j19a.c  serial_transport_win32.c  tm_config.h  tm_reader.c  tm_reader.h  tm_reader_async.c  tmr_loadsave_configuration.c  tmr_params.h  tmr_status.h  tmr_strerror.c  tmr_tagop.h
M6E_API/include/: osdep.h  serial_reader_imp.h  tm_config.h
M6E_API/ltkc_win32/projVS2019/libltkc/: libltkc.vcxproj
M6E_API/ltkc_win32/projVS2019/libltkcllrporg/: libltkcllrporg.vcxproj
MFRC522/: CMakeLists.txt  rfid_api.c  rfid_api.h  rfid_test.c
ProjectFiles/: CMakeLists.txt  CMakeLists1.txt  CMakeLists_braeden.txt  CMakeLists_jack.txt  Makefile  data.h  example_pets.json  lwipopts.h  main(INTERRUPT).c  main(RFID).c  main(RTOS_SSL).c  main(SERVER).c  main.c  notmain.c
SERVO/: CMakeLists.txt  Servo_API copy.c  servo_api.c  servo_api.h  servo_test.c
wolfssl/: CMakeLists.txt  Makefile  cmake_install.cmake  user_settings.h
wolfssl/wolfssl/wolfcrypt/: settings.h
